# ensindexer-rs

./: .dockerignore  .env.example  .gitignore  BENCHMARK.md  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  TODOs.md  compose.yml
.github/workflows/: deploy.yml  dispatch.yml
benchmarks/: README.md
benchmarks/queries/: 01-domain-batch.graphql  01-domain-batch.variables.json  02-names-for-address.graphql  02-names-for-address.variables.json  03-eth-subnames.graphql  03-eth-subnames.variables.json  04-subnames-search.graphql  04-subnames-search.variables.json  04c-subnames-search-3-letter.graphql  04c-subnames-search-3-letter.variables.json  05-decoded-label.graphql  (+19 more)
crates/cli/: Cargo.toml  README.md
crates/cli/examples/: benchmark.rs
crates/cli/src/: app.rs  benchmark.rs  compare.rs  label_heal.rs  main.rs  schema.rs
crates/cli/src/schema/: local.rs  model.rs  official.rs
crates/contracts/: Cargo.toml  README.md
crates/contracts/src/: abi.rs  events.rs  lib.rs  model.rs
crates/contracts/src/events/: fixed.rs  resolver.rs  shared.rs  topics.rs
crates/ingest/: Cargo.toml  README.md
crates/ingest/src/: archive.rs  decode.rs  hypersync.rs  lib.rs  rpc.rs  service.rs  sources.rs
crates/ingest/src/archive/: coverage.rs  manifest.rs  model.rs  resolvers.rs
crates/ingest/src/service/: apply.rs  backfill.rs  live.rs  preload.rs  replay.rs
crates/projection/: Cargo.toml  README.md
crates/projection/src/: error.rs  handlers.rs  lib.rs  support.rs
crates/projection/src/handlers/: dispatcher.rs  registrar.rs  registry.rs  resolver.rs  wrapper.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: http.rs  lib.rs  runtime.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: change_buffer.rs  entity_cache.rs  entity_cache_flush.rs  entity_cache_preload.rs  error.rs  event_buffer.rs  filters.rs  inserts.rs  lib.rs  maintenance.rs  models.rs  query.rs  repositories.rs  store.rs
crates/storage/src/change_buffer/: snapshot_flush.rs
crates/storage/src/change_buffer/snapshot_flush/: db.rs
crates/storage/src/filters/: account.rs  domain.rs  event.rs  order.rs  registration.rs  resolver.rs  wrapped_domain.rs
crates/storage/src/maintenance/: replay_indexes.rs
crates/storage/src/maintenance/replay_indexes/: current.rs  events.rs
crates/storage/src/query/: arrays.rs  relations.rs  scalars.rs  select.rs  tests.rs  text_filters.rs
crates/storage/src/query/relations/: account.rs  conditions.rs  domain.rs  resolver.rs  subquery.rs
crates/storage/src/query/tests/: mod.rs  relations.rs  scalars.rs
crates/storage/src/repositories/: accounts.rs  blocks.rs  checkpoints.rs  domains.rs  entity_changes.rs  events.rs  label_preimages.rs  registrations.rs  resolvers.rs  snapshots.rs  utils.rs  wrapped_domains.rs
crates/storage/src/repositories/domains/: derived_filters.rs  fast_address.rs  filter_fields.rs  mutations.rs  queries.rs
crates/storage/src/repositories/events/: common.rs  composition.rs  derived_filters.rs  event_filters.rs  event_sql.rs  insert_domain.rs  insert_registration.rs  insert_resolver.rs  interface_filters.rs  mod.rs  refs.rs  specific_filters.rs  text_fields.rs
crates/storage/src/repositories/events/event_filters/: tests.rs
crates/storage/src/repositories/events/event_filters/tests/: change_block.rs  relation_operator_fields.rs
crates/storage/src/repositories/registrations/: composition.rs  filtering.rs
crates/storage/src/repositories/resolvers/: composition.rs  filtering.rs
crates/storage/src/repositories/wrapped_domains/: composition.rs  filtering.rs
docs/: README.md  architecture.md  future-work.md  graphql-compatibility.md  implementation-roadmap.md  ingestion-and-archives.md  official-subgraph-overview.md  operations.md  performance-and-benchmarks.md  projection-and-storage.md  projection-logic.md  rust-implementation-notes.md  schema-and-graphql-shape.md
migrations/: 20260606000000_initial.sql  20260607170000_entity_snapshots.sql  20260608071000_drop_large_text_lower_indexes.sql  20260608082000_add_domain_lookup_indexes.sql  20260608085000_add_label_preimages.sql  20260608091000_add_label_preimage_misses.sql  20260608093000_drop_label_preimage_misses.sql  20260608095000_add_label_heal_indexes.sql  20260608101000_add_ensnode_query_indexes.sql  20260608103000_add_ensjs_address_indexes.sql  20260608112000_add_subdomain_order_indexes.sql  20260608113000_add_domain_exact_sort_indexes.sql  20260608114000_add_registration_label_indexes.sql  20260617000000_parent_text_search_indexes.sql
research/: README.md  implementation-roadmap.md  rust-implementation-notes.md
research-v1/: 01-architecture-principles.md  02-source-families-and-contract-patterns.md  03-global-name-identity.md  04-normalized-event-layer.md  05-storage-model.md  06-projections-and-api.md  07-adapter-interface-and-manifests.md  08-backfill-reorgs-and-performance.md  09-protocol-specific-mappings.md  10-rust-workspace-plan.md  11-edge-cases-and-tests.md  12-decision-record.md  13-requirement-coverage.md  14-contract-event-inventory.md  15-authority-scope-examples.md  16-production-table-catalog.md  17-event-flow.md  18-bigname-model-comparison.md  19-postgres-storage-schema.md  README.md
scripts/: ens-heal.sh
(+80 files in other folders)
