[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Vedant Chainani"]

[workspace.dependencies]
alloy = "2.0.5"
alloy-network-primitives = "2.0.5"
alloy-primitives = { version = "1.6.0", features = ["serde"] }
alloy-sol-types = "1.6.0"
anyhow = "1.0.102"
async-graphql = { version = "8.0.0-rc.5", features = ["dataloader"] }
async-graphql-axum = "8.0.0-rc.5"
axum = "0.8.9"
bigdecimal = { version = "0.4.10", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
hypersync-client = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "json", "bigdecimal"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["compression-full", "cors", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5.8", features = ["serde"] }

api = { path = "crates/api" }
config = { path = "crates/config" }
contracts = { path = "crates/contracts" }
ingest = { path = "crates/ingest" }
projection = { path = "crates/projection" }
server = { path = "crates/server" }
storage = { path = "crates/storage" }
types = { path = "crates/types" }
