[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
api.workspace = true
async-graphql.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
ingest.workspace = true
reqwest.workspace = true
serde_json.workspace = true
server.workspace = true
storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
types.workspace = true
