[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ensindexer"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
server.workspace = true
storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
