[package]
name = "contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
types.workspace = true
serde.workspace = true
thiserror.workspace = true
