[package]
name = "ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
alloy-network-primitives.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
config.workspace = true
contracts.workspace = true
hypersync-client.workspace = true
projection.workspace = true
storage.workspace = true
types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
