[package]
name = "projection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy-primitives.workspace = true
bigdecimal.workspace = true
contracts.workspace = true
storage.workspace = true
types.workspace = true
thiserror.workspace = true
tracing.workspace = true
