[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
api.workspace = true
config.workspace = true
storage.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
